js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-no-new-call-expression.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
new
import
(
'
'
)
;
}
